fix body content alignment

--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
   /* font-family: 'Overpass', sans-serif; */
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 40px;
+}
+
 #root {
   max-width: 1280px;
   display: flex;
@@ -52,10 +59,6 @@ header .material-icons {
   font-size: 24px;
 
   padding-right: 10px;
-}
-
-body {
-  margin: 40px;
 }
 
 .book-review {
